fix link color in dark mode

--- a/static/style/style.styl
+++ b/static/style/style.styl
@@ -336,6 +336,9 @@ ul,li
   background-color #000
   color #fff
 
+  a
+    color #fff
+
   transition: background-color .5s;
   -webkit-transition: background-color .5s;
   -o-transition: background-color .5s;
